--- a/dot.config/i3/config
+++ b/dot.config/i3/config
@@ -189,7 +189,7 @@ focus_on_window_activation focus
 force_display_urgency_hint 500 ms
 # no bordes if only one window on workspace
 hide_edge_borders smart
-# selecting same workspace again will bring me back to the previous workspace 
+# selecting same workspace again will bring me back to the previous workspace
 # workspace_auto_back_and_forth yes
 
 # Firefox (class= Navigator, Firefox)
@@ -205,12 +205,20 @@ for_window [title="Receiving file.*"] floating enable
 for_window [title="klipper"] floating enable border none
 for_window [class="DigitalRooster"] floating enable
 
+# -------------------------------------------------------------
+
+#KeepassXC serves also as freedesktop secret provider
+exec --no-startup-id /usr/local/bin/keepassxc  /home/ruschi/ownCloud/keepassxc.kdbx
 # Policy Kit authenticator (kwallet)
 exec --no-startup-id dex /etc/xdg/autostart/polkit-kde-authentication-agent-1.desktop
-exec --no-startup-id /usr/local/bin/keepassxc  /home/ruschi/ownCloud/keepassxc.kdbx
 
-exec --no-startup-id dex /home/ruschi/.config/autostart/ownCloud.desktop
-exec --no-startup-id /usr/bin/nextcloud
+# Klipper clipboard manager
 exec --no-startup-id dex /usr/share/applications/org.kde.klipper.desktop
-exec --no-startup-id firefox
-exec --no-startup-id kmail
+# USB volume notifier / automounter (-A = do not automount)
+exec --no-startup-id /usr/bin/udiskie -Ans
+
+# Kmail2
+# exec --no-startup-id dex /usr/share/applications/org.kde.kmail2.desktop
+
+# owncloud
+# exec --no-startup-id dex /home/ruschi/.config/autostart/ownCloud.desktop
