--- a/dot.ssh/config
+++ b/dot.ssh/config
@@ -2,6 +2,10 @@ Host 192.168.*.*
   StrictHostKeyChecking no
   UserKnownHostsFile=/dev/null
 
+Host 172.21.*.*
+    StrictHostKeyChecking no
+    UserKnownHostsFile=/dev/null
+
 Host rpi0w-test
   StrictHostKeyChecking no
   UserKnownHostsFile=/dev/null
