--- a/dot.config/i3/config
+++ b/dot.config/i3/config
@@ -36,11 +36,12 @@ bindsym $mod+Return exec i3-sensible-terminal
 bindsym $mod+Shift+q kill
 
 # start dmenu (a program launcher)
-bindsym $mod+d exec dmenu_run -fn 'LiberationSansMono:bold:pixelsize=14' -nf '#707080' -sf '#fdf6e3' -sb '#FFAF00'
+#bindsym $mod+d exec dmenu_run -fn 'LiberationSansMono:bold:pixelsize=14' -nf '#707080' -sf '#fdf6e3' -sb '#FFAF00'
 # There also is the (new) i3-dmenu-desktop which only displays applications
 # shipping a .desktop file. It is a wrapper around dmenu, so you need that
 # installed.
-# bindsym $mod+d exec --no-startup-id i3-dmenu-desktop
+set $dmenu 'dmenu -i -fn LiberationSansMono:bold:pixelsize=14 -nf #707080 -sf #fdf6e3 -sb #FFAF00'
+bindsym $mod+d exec --no-startup-id i3-dmenu-desktop --dmenu=$dmenu
 
 # change focus
 bindsym $mod+j focus left
@@ -105,17 +106,22 @@ set $ws8 "8"
 set $ws9 "9"
 set $ws10 "10"
 
-# switch to workspace
-bindsym $mod+1 workspace $ws1
-bindsym $mod+2 workspace $ws2
-bindsym $mod+3 workspace $ws3
-bindsym $mod+4 workspace $ws4
-bindsym $mod+5 workspace $ws5
-bindsym $mod+6 workspace $ws6
-bindsym $mod+7 workspace $ws7
-bindsym $mod+8 workspace $ws8
-bindsym $mod+9 workspace $ws9
-bindsym $mod+0 workspace $ws10
+
+# Switch workspace and assing desktop wallpaper
+# https://faq.i3wm.org/question/5346/assigning-wallpaper-to-workspaces.1.html
+set $feh exec --no-startup-id feh --bg-max --image-bg black --no-fehbg
+
+bindsym $mod+1 workspace $ws1 ; $feh ~/.wallpapers/SGI-purple.jpg
+bindsym $mod+2 workspace $ws2 ; $feh ~/.wallpapers/Solaris.jpg
+bindsym $mod+3 workspace $ws3 ; $feh ~/.wallpapers/MacOS9.jpg
+bindsym $mod+4 workspace $ws4 ; $feh ~/.wallpapers/NEXTStep.jpg
+bindsym $mod+5 workspace $ws5 ; $feh ~/.wallpapers/IBM.jpg
+bindsym $mod+6 workspace $ws6 ; $feh ~/.wallpapers/Windows95.jpg
+bindsym $mod+7 workspace $ws7 ; $feh ~/.wallpapers/Sun.png
+bindsym $mod+8 workspace $ws8 ; $feh ~/.wallpapers/WinNT4.jpg
+bindsym $mod+9 workspace $ws9 ; $feh ~/.wallpapers/9.jpg
+bindsym $mod+0 workspace $ws10 ; $feh ~/.wallpapers/10.jpg
+
 
 # move focused container to workspace
 bindsym $mod+Shift+1 move container to workspace $ws1
