--- a/dot.ssh/config
+++ b/dot.ssh/config
@@ -1,6 +1,9 @@
 Host 192.168.*.*
   StrictHostKeyChecking no
   UserKnownHostsFile=/dev/null
+  ControlMaster auto
+  ControlPath ~/.ssh/control-%r@%h:%p
+  ControlPersist 300
 
 Host 172.21.*.*
     StrictHostKeyChecking no
