--- a/VillaStraylight/dot.config/i3status/config
+++ b/VillaStraylight/dot.config/i3status/config
@@ -2,15 +2,22 @@ general {
         output_format = "i3bar"
         colors = true
         interval = 5
+        color_good = "#8dd80a"
+        color_degraded = "#f49911"
+        color_bad = "#f43711"
 }
 
-order += "ipv6"
 order += "disk /"
-order += "wireless wlp2s0"
-order += "ethernet eth0"
+order += "disk /home"
 order += "memory"
+order += "cpu_usage"
 order += "load"
 order += "cpu_temperature 0"
+
+order += "wireless wlp2s0"
+order += "ethernet enp0s31f6"
+
+order += "volume master"
 order += "tztime berlin"
 
 wireless wlp2s0 {
@@ -18,34 +25,9 @@ wireless wlp2s0 {
         format_down = "W: down"
 }
 
-ethernet eth0 {
-        format_up = "E: %ip (%speed)"
+ethernet enp0s31f6 {
+        format_up = "Eth enp0s31f6:  %ip (%speed)"
         format_down = "E: down"
-}
-
-battery 0 {
-        format = "%status %percentage %remaining %emptytime"
-        format_down = "No battery"
-        status_chr = "⚡ CHR"
-        status_bat = "🔋 BAT"
-        status_unk = "? UNK"
-        status_full = "☻ FULL"
-        path = "/sys/class/power_supply/BAT%d/uevent"
-        low_threshold = 10
-}
-
-run_watch DHCP {
-        pidfile = "/var/run/dhclient*.pid"
-}
-
-run_watch VPNC {
-        # file containing the PID of a vpnc process
-        pidfile = "/var/run/vpnc/pid"
-}
-
-path_exists VPN {
-        # path exists when a VPN tunnel launched by nmcli/nm-applet is active
-        path = "/proc/sys/net/ipv4/conf/tun0"
 }
 
 tztime local {
@@ -58,25 +40,44 @@ tztime berlin {
         timezone = "Europe/Berlin"
 }
 
+volume master {
+        format = "🔊 %volume"
+        format_muted = "🔈 %volume"
+        device = "pulse"
+}
+
+
 load {
         format = "Load: [%1min,%5min]"
 }
 
+cpu_usage  {
+   format = "CPU: %usage"
+   max_threshold = 75
+   degraded_threshold = 50
+}
+
 cpu_temperature 0 {
         format = "T: %degrees °C"
-        path = "/sys/devices/platform/coretemp.0/hwmon/hwmon1/temp1_input"
+        path = "/sys/devices/platform/coretemp.0/hwmon/hwmon2/temp1_input"
 }
 
 memory {
-        format = "%used"
+        format = "RAM: %used"
         threshold_degraded = "10%"
         format_degraded = "MEMORY: %free"
 }
 
 disk "/" {
-        format = "%free"
+        format = "/ %used/%total"
+	low_threshold = 25
+      	threshold_type = percentage_free
 }
 
-read_file uptime {
-        path = "/proc/uptime"
+disk "/home" {
+      format = "/home %used/%total"
+      low_threshold = 25
+      threshold_type = percentage_free
 }
+
+
