--- a/VillaStraylight/dot.config/i3status/config
+++ b/VillaStraylight/dot.config/i3status/config
@@ -41,8 +41,8 @@ tztime berlin {
 }
 
 volume master {
-        format = "🔊 %volume"
-        format_muted = "🔈 %volume"
+        format = " %volume"
+        format_muted = " %volume"
         device = "pulse"
 }
 
@@ -59,7 +59,7 @@ cpu_usage  {
 
 cpu_temperature 0 {
         format = "T: %degrees °C"
-        path = "/sys/devices/platform/coretemp.0/hwmon/hwmon2/temp1_input"
+        path = "/sys/devices/platform/coretemp.0/hwmon/hwmon1/temp1_input"
 }
 
 memory {
