--- a/VillaStraylight/dot.config/i3status/config
+++ b/VillaStraylight/dot.config/i3status/config
@@ -59,7 +59,7 @@ cpu_usage  {
 
 cpu_temperature 0 {
         format = "T: %degrees °C"
-        path = "/sys/devices/platform/coretemp.0/hwmon/hwmon1/temp1_input"
+        path = "/sys/class/thermal/thermal_zone0/temp"
 }
 
 memory {
