--- a/dot.config/i3/config
+++ b/dot.config/i3/config
@@ -227,6 +227,7 @@ bindsym $mod+g [urgent=latest] focus
 hide_edge_borders smart
 # selecting same workspace again will bring me back to the previous workspace
 # workspace_auto_back_and_forth yes
+bindsym Mod1+Tab workspace back_and_forth
 
 # Firefox (class= Navigator, Firefox)
 for_window [class="kmail2"] move container to workspace $ws5
