--- a/dot.ssh/config
+++ b/dot.ssh/config
@@ -5,14 +5,17 @@ Host 192.168.*.*
   ControlPath ~/.ssh/control-%r@%h:%p
   ControlPersist 300
 
+
 Host 172.21.*.*
     StrictHostKeyChecking no
     UserKnownHostsFile=/dev/null
 
-Host rpi0w-test
+Host rpi0w-dev
   StrictHostKeyChecking no
   UserKnownHostsFile=/dev/null
 
 Host digitalrooster
   StrictHostKeyChecking no
   UserKnownHostsFile=/dev/null
+  User root
+  IdentityFile ~/.ssh/id_digitalrooster
