work: fix for debian bullseye in VM
Signed-off-by: Thomas Ruschival <thomas@ruschival.de>

--- a/work/dot.config/i3/config
+++ b/work/dot.config/i3/config
@@ -35,13 +35,18 @@ bindsym $mod+Return exec i3-sensible-terminal
 # kill focused window
 bindsym $mod+Shift+q kill
 
+# Use variable for exec --no-startup-id which is used thousand times...
+set $execnsid exec --no-startup-id
+# I3-lock used in lock and auto-lock
+set $screenlock i3lock -i ~/.wallpapers/lockscreen-scaled.png
+
 # start dmenu (a program launcher)
 #bindsym $mod+d exec dmenu_run -fn 'LiberationSansMono:bold:pixelsize=14' -nf '#707080' -sf '#fdf6e3' -sb '#FFAF00'
 # There also is the (new) i3-dmenu-desktop which only displays applications
 # shipping a .desktop file. It is a wrapper around dmenu, so you need that
 # installed.
 set $dmenu 'dmenu -i -fn LiberationSansMono:bold:pixelsize=14 -nf #707080 -sf #fdf6e3 -sb #FFAF00'
-bindsym $mod+d exec --no-startup-id i3-dmenu-desktop --dmenu=$dmenu
+bindsym $mod+d $execnsid i3-dmenu-desktop --dmenu=$dmenu
 
 # change focus
 bindsym $mod+j focus left
@@ -69,10 +74,8 @@ bindsym $mod+Shift+Right move right
 
 # split in horizontal orientation
 bindsym $mod+h split h
-
 # split in vertical orientation
 bindsym $mod+v split v
-
 # enter fullscreen mode for the focused container
 bindsym $mod+f fullscreen toggle
 
@@ -89,9 +92,8 @@ bindsym $mod+space focus mode_toggle
 
 # focus the parent container
 bindsym $mod+a focus parent
-
 # focus the child container
-# bindsym $mod+d focus child
+bindsym $mod+z focus child
 
 # Define names for default workspaces for which we configure key bindings later on.
 # We use variables to avoid repeating the names in multiple places.
@@ -105,7 +107,6 @@ set $ws7 "7"
 set $ws8 "8"
 set $ws9 "9"
 set $ws10 "10"
-
 
 # class                 border  backgr. text    indicator child_border
 client.focused          #4c7899 #285577 #ffffff #2e9ef4   #285577
@@ -123,13 +124,14 @@ bindsym $mod+1 workspace $ws1 ; $feh ~/.wallpapers/Solaris.jpg
 bindsym $mod+2 workspace $ws2 ; $feh ~/.wallpapers/SGI-purple.jpg
 bindsym $mod+3 workspace $ws3 ; $feh ~/.wallpapers/MacOS9.jpg
 bindsym $mod+4 workspace $ws4 ; $feh ~/.wallpapers/Sun.png
-bindsym $mod+5 workspace $ws5 ; $feh ~/.wallpapers/NEXTStep.jpg
+bindsym $mod+5 workspace $ws5 ; $feh ~/.wallpapers/C64.jpg
 bindsym $mod+6 workspace $ws6 ; $feh ~/.wallpapers/Windows95.jpg
 bindsym $mod+7 workspace $ws7 ; $feh ~/.wallpapers/IBM.jpg
 bindsym $mod+8 workspace $ws8 ; $feh ~/.wallpapers/WinNT4.jpg
 bindsym $mod+9 workspace $ws9 ; $feh ~/.wallpapers/9.jpg
 bindsym $mod+0 workspace $ws10 ; $feh ~/.wallpapers/10.jpg
-
+#initial wallpaper
+$execnsid $feh ~/.wallpapers/SGI-purple.jpg
 
 # move focused container to workspace
 bindsym $mod+Shift+1 move container to workspace $ws1
@@ -148,44 +150,52 @@ bindsym $mod+Shift+c reload
 # restart i3 inplace (preserves your layout/session, can be used to upgrade i3)
 bindsym $mod+Shift+r restart
 # exit i3 (logs you out of your X session)
-bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -b 'Yes, exit i3' 'i3-msg exit'"
-bindsym $mod+Shift+Pause exec "i3-nagbar -m 'Exit?' -b 'Sleep' 'i3lock && systemctl suspend' -b 'Reboot' 'systemctl reboot' -b 'Poweroff' 'systemctl poweroff'"
-
+bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -B 'Yes, exit i3' 'i3-msg exit'"
 
 # resize window (you can also use the mouse for that)
 mode "resize" {
-        # These bindings trigger as soon as you enter the resize mode
+	# These bindings trigger as soon as you enter the resize mode
 
-        # Pressing left will shrink the window’s width.
-        # Pressing right will grow the window’s width.
-        # Pressing up will shrink the window’s height.
-        # Pressing down will grow the window’s height.
-        bindsym j resize shrink width 10 px or 10 ppt
-        bindsym k resize grow height 10 px or 10 ppt
-        bindsym l resize shrink height 10 px or 10 ppt
-        bindsym semicolon resize grow width 10 px or 10 ppt
+	# Pressing left will shrink the window’s width.
+	# Pressing right will grow the window’s width.
+	# Pressing up will shrink the window’s height.
+	# Pressing down will grow the window’s height.
+	bindsym j resize shrink width 10 px or 10 ppt
+	bindsym k resize grow height 10 px or 10 ppt
+	bindsym l resize shrink height 10 px or 10 ppt
+	bindsym semicolon resize grow width 10 px or 10 ppt
 
-        # same bindings, but for the arrow keys
-        bindsym Left resize shrink width 10 px or 10 ppt
-        bindsym Down resize grow height 10 px or 10 ppt
-        bindsym Up resize shrink height 10 px or 10 ppt
-        bindsym Right resize grow width 10 px or 10 ppt
+	# same bindings, but for the arrow keys
+	bindsym Left resize shrink width 10 px or 10 ppt
+	bindsym Down resize grow height 10 px or 10 ppt
+	bindsym Up resize shrink height 10 px or 10 ppt
+	bindsym Right resize grow width 10 px or 10 ppt
 
-        # back to normal: Enter or Escape or $mod+r
-        bindsym Return mode "default"
-        bindsym Escape mode "default"
-        bindsym $mod+r mode "default"
+	# back to normal: Enter or Escape or $mod+r
+	bindsym Return mode "default"
+	bindsym Escape mode "default"
+	bindsym $mod+r mode "default"
 }
-
 bindsym $mod+r mode "resize"
+
+# Special Exit mode
+mode "exit: [l]ock, [s]leep, [r]eboot, [p]oweroff" {
+  bindsym l exec $screenlock
+  bindsym s exec $screenlock && systemctl suspend
+  bindsym r exec systemctl reboot
+  bindsym p exec systemctl poweroff
+  bindsym Escape mode "default"
+  bindsym Return mode "default"
+}
+bindsym $mod+p mode "exit: [l]ock, [s]leep, [r]eboot, [p]oweroff"
 
 #-------------------------------------------------------------------------------
 # Hotkeys for programs
 #-------------------------------------------------------------------------------
-bindsym Print exec --no-startup-id spectacle
-bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ +5%
-bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ -5%
-bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute @DEFAULT_SINK@ toggle
+bindsym $mod+Print $execnsid /usr/bin/spectacle
+bindsym XF86AudioRaiseVolume $execnsid pactl set-sink-volume @DEFAULT_SINK@ +5%
+bindsym XF86AudioLowerVolume $execnsid pactl set-sink-volume @DEFAULT_SINK@ -5%
+bindsym XF86AudioMute $execnsid pactl set-sink-mute @DEFAULT_SINK@ toggle
 
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
@@ -194,14 +204,14 @@ bar {
     status_command i3status
 
     colors {
-        background #404050
-        statusline #eeeeee
-        separator  #666688
-        #                  border  backgr. text
-        focused_workspace  #555555 #285577 #ffffff
-        active_workspace   #555555 #5f676a #ffffff
-        inactive_workspace #555555 #404050 #888888
-        urgent_workspace   #2f343a #900000 #ffffff
+	background #404050
+	statusline #eeeeee
+	separator  #666688
+	#                  border  backgr. text
+	focused_workspace  #555555 #285577 #ffffff
+	active_workspace   #555555 #5f676a #ffffff
+	inactive_workspace #555555 #404050 #888888
+	urgent_workspace   #2f343a #900000 #ffffff
     }
 }
 
@@ -217,6 +227,7 @@ bindsym $mod+g [urgent=latest] focus
 hide_edge_borders smart
 # selecting same workspace again will bring me back to the previous workspace
 # workspace_auto_back_and_forth yes
+bindsym Mod1+Tab workspace back_and_forth
 
 # Firefox (class= Navigator, Firefox)
 for_window [class="kmail2"] move container to workspace $ws5
@@ -237,25 +248,19 @@ for_window [class="[sS]team" title="Steam - News.*"] floating enable
 for_window [class="[sS]team"] enable
 
 # -------------------------------------------------------------
-#initial wallpaper
-exec --no-startup-id $feh ~/.wallpapers/SGI-purple.jpg
-# Lock screen and go blank
-exec --no-startup-id xautolock -corners ++00 -locker 'i3lock -i ~/.wallpapers/lockscreen-scaled.png'
+# Lock screen and go blank after 10 min
+$execnsid xautolock -corners ++00 -time 10 -locker ' $screenlock '
 
 #KeepassXC serves also as freedesktop secret provider
-exec --no-startup-id /usr/local/bin/keepassxc  /home/ruschi/ownCloud/keepassxc.kdbx
+$execnsid /usr/bin/keepassxc  /home/ruschi/ownCloud/keepassxc.kdbx
 # Policy Kit authenticator (kwallet)
-exec --no-startup-id dex /etc/xdg/autostart/pam_kwallet_init.desktop
-exec --no-startup-id dex /etc/xdg/autostart/polkit-kde-authentication-agent-1.desktop
+$execnsid dex /etc/xdg/autostart/pam_kwallet_init.desktop
+$execnsid dex /etc/xdg/autostart/polkit-kde-authentication-agent-1.desktop
+
+# unclutter hides Mouse pointer after 5s
+$execnsid /usr/bin/unclutter --timeout 5 --jitter 2
 
 # Klipper clipboard manager
-# exec --no-startup-id dex /usr/share/applications/org.kde.klipper.desktop
-exec --no-startup-id dex /usr/share/applications/clipit.desktop
+$execnsid /usr/bin/qlipper
 # USB volume notifier / automounter (-A = do not automount)
-exec --no-startup-id /usr/bin/udiskie -Ans
-
-# Kmail2
-# exec --no-startup-id dex /usr/share/applications/org.kde.kmail2.desktop
-
-# owncloud
-# exec --no-startup-id dex /home/ruschi/.config/autostart/ownCloud.desktop
+$execnsid /usr/bin/udiskie -Ans
