Forward X11 session in local net
Signed-off-by: Thomas Ruschival <thomas@ruschival.de>

--- a/dot.ssh/config
+++ b/dot.ssh/config
@@ -1,9 +1,12 @@
-Host 192.168.*.*
+Host 192.168.*.* villastraylight Villastraylight
+ User ruschi
  StrictHostKeyChecking no
  UserKnownHostsFile=/dev/null
  ControlMaster no
  ControlPath ~/.ssh/control-%r@%h:%p
  ControlPersist 0
+ ForwardX11 yes
+ ForwardX11Trusted yes
 
 Host 172.21.*.*
     StrictHostKeyChecking no
