--- a/dot.config/i3/config
+++ b/dot.config/i3/config
@@ -13,18 +13,7 @@ set $mod Mod4
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
-font pango: Liberation Mono 9
-
-# This font is widely installed, provides lots of unicode glyphs, right-to-left
-# text rendering and scalability on retina/hidpi displays (thanks to pango).
-#font pango:DejaVu Sans Mono 8
-
-# Before i3 v4.8, we used to recommend this one as the default:
-# font -misc-fixed-medium-r-normal--13-120-75-75-C-70-iso10646-1
-# The font above is very space-efficient, that is, it looks good, sharp and
-# clear in small sizes. However, its unicode glyph coverage is limited, the old
-# X core fonts rendering does not support right-to-left and this being a bitmap
-# font, it doesn’t scale on retina/hidpi displays.
+font pango: Liberation Mono 8
 
 # Use Mouse+$mod to drag floating windows to their wanted position
 floating_modifier $mod
@@ -36,7 +25,7 @@ bindsym $mod+Return exec i3-sensible-terminal
 bindsym $mod+Shift+q kill
 
 # Use variable for exec --no-startup-id which is used thousand times...
-set $execnsid exec --no-startup-id 
+set $execnsid exec --no-startup-id
 # I3-lock used in lock and auto-lock
 set $screenlock i3lock -i ~/.wallpapers/lockscreen-scaled.png
 
@@ -183,7 +172,7 @@ mode "exit: [l]ock, [s]leep, [r]eboot, [p]oweroff" {
   bindsym l exec $screenlock
   bindsym s exec dbus-send --system --print-reply --dest=org.freedesktop.login1 /org/freedesktop/login1 "org.freedesktop.login1.Manager.Suspend" boolean:true
   bindsym r exec dbus-send --system --print-reply --dest=org.freedesktop.login1 /org/freedesktop/login1 "org.freedesktop.login1.Manager.Reboot" boolean:true
-  bindsym p exec dbus-send --system --print-reply --dest=org.freedesktop.login1 /org/freedesktop/login1 "org.freedesktop.login1.Manager.PowerOff" boolean:true 
+  bindsym p exec dbus-send --system --print-reply --dest=org.freedesktop.login1 /org/freedesktop/login1 "org.freedesktop.login1.Manager.PowerOff" boolean:true
   bindsym Escape mode "default"
   bindsym Return mode "default"
 }
@@ -200,13 +189,13 @@ bindsym XF86AudioMute $execnsid pactl set-sink-mute @DEFAULT_SINK@ toggle
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
-    font pango: Liberation Mono 8
+    font pango: Hack, Symbola 9
     status_command i3status
 
     colors {
         background #404050
         statusline #eeeeee
-        separator  #666688
+        separator  #668888
         #                  border  backgr. text
         focused_workspace  #555555 #285577 #ffffff
         active_workspace   #555555 #5f676a #ffffff
@@ -229,9 +218,6 @@ hide_edge_borders smart
 # workspace_auto_back_and_forth yes
 bindsym Mod1+Tab workspace back_and_forth
 
-# Matches main window but not floating dialog requesting access to credentials
-assign [class=".* - [Kk]ee[Pp]assXC$"] $ws10
-
 # KDE stuff / floating windows
 for_window [class="apt-listchanges*"] floating enable
 for_window [class="[dD]olphin" title="(Copying.*)|(Moving.*)|(Progress Dialog)"] floating enable
@@ -241,19 +227,29 @@ for_window [class="^[pP]avucontrol"] floating enable border normal 2
 for_window [class="DigitalRooster"] floating enable
 
 # Steam config
-for_window [class="[sS]team" title="Steam - News.*"] floating enable
-for_window [class="[sS]team"] enable
+for_window [class="^Steam$" title="^Friends$"] floating enable
+for_window [class="^Steam$" title="Steam - News"] floating enable
+for_window [class="^Steam$" title=".* - Chat"] floating enable
+for_window [class="^Steam$" title="^Settings$"] floating enable
+for_window [class="^Steam$" title=".* - event started"] floating enable
+for_window [class="^Steam$" title=".* CD key"] floating enable
+for_window [class="^Steam$" title="^Steam - Self Updater$"] floating enable
+for_window [class="^Steam$" title="^Screenshot Uploader$"] floating enable
+for_window [class="^Steam$" title="^Steam Guard - Computer Authorization Required$"] floating enable
+for_window [title="^Steam Keyboard$"] floating enable
 
 # -------------------------------------------------------------
 # Lock screen and go blank after 10 min
-$execnsid xautolock -corners ++00 -time 10 -locker ' $screenlock '
+# + : Start after -cornerdelay
+# 0 : Inore Corner
+# - : Do not lock screen
+$execnsid xautolock -corners 00-- -time 10 -locker ' $screenlock '
+
+# Policy Kit authenticator (for pkexec dialogs e.g. synaptic)
+$execnsid dex /etc/xdg/autostart/polkit-kde-authentication-agent-1.desktop
 
 #KeepassXC serves also as freedesktop secret provider
 $execnsid /usr/bin/keepassxc  /home/ruschi/ownCloud/keepassxc.kdbx
-# Policy Kit authenticator (kwallet)
-$execnsid dex /etc/xdg/autostart/pam_kwallet_init.desktop
-$execnsid dex /etc/xdg/autostart/polkit-kde-authentication-agent-1.desktop
-
 # unclutter hides Mouse pointer after 5s
 $execnsid /usr/bin/unclutter --timeout 5 --jitter 2
 
@@ -265,8 +261,5 @@ $execnsid /usr/bin/udiskie -Ans
 $execnsid /usr/bin/blueman-applet
 # PulseAudio Applet (/usr/share/applications/pasystray.desktop)
 $execnsid /usr/bin/pasystray
-
-# NextCloud Applet - needs access to keepassxc for auth
-# $execnsid dex /usr/share/applications/com.nextcloud.desktopclient.nextcloud.desktop
-
-
+# network-manager
+$execnsid /usr/bin/nm-tray
