--- a/dot.config/waybar/config
+++ b/dot.config/waybar/config
@@ -18,8 +18,7 @@
         "format": "{name}: {icon}",
 
 	"format-icons": {
-            "1": "",
-            "2": "",
+            "1": "⚿",
             "8": "",
             "urgent":  "<span color='#e85c5c'></span>",
             "focused": "<span color='#8af0f0'></span>",
@@ -125,14 +124,14 @@
         // "scroll-step": 5, // %, can be a float
         "format": "{volume}% {icon} {format_source}",
         "format-bluetooth": "{volume}% {icon} {format_source}",
-        "format-bluetooth-muted": " {icon} {format_source}",
-        "format-muted": " {format_source}",
+        "format-bluetooth-muted": "🔇 {icon} {format_source}",
+        "format-muted": "🔇 {format_source}",
         "format-source": "{volume}% ",
         "format-source-muted": "",
         "format-icons": {
             "headphone": "",
-            "hands-free": "",
-            "headset": "",
+            "hands-free": "🎧",
+            "headset": "🎧",
             "phone": "",
             "portable": "",
             "car": "",
