--- a/dot.config/waybar/config
+++ b/dot.config/waybar/config
@@ -1,16 +1,16 @@
 {
     "layer": "top",		// top layer (over windows)
     "position": "bottom", 	// position (top|bottom|left|right)
-    "height": 22, 		// height (to be removed for auto height)
+    "height": 29, 		// height (to be removed for auto height)
     "spacing": 10, 		// Gaps between modules (4px)
 
     // Choose the order of the modules
     "modules-left": ["sway/workspaces", "sway/mode"],
     "modules-center": ["sway/window"],
-    "modules-right": ["idle_inhibitor",  "pulseaudio", "custom/weather",
-    		      "network", "cpu", "memory", "temperature",
-		      "backlight", "keyboard-state",
-		      "battery", "clock", "tray"],
+    "modules-right": ["custom/weather",
+    		      "cpu", "memory", "temperature", "backlight",
+		      "battery", "pulseaudio", "network",
+		      "clock", "idle_inhibitor", "tray"],
 
     "sway/workspaces": {
         "disable-scroll": true,
@@ -38,7 +38,7 @@
 
     "sway/mode": {
         "format": "<span style=\"italic\">{}</span>"
-	},
+     },
 
     "sway/scratchpad": {
         "format": "{icon} {count}",
@@ -60,7 +60,7 @@
 
     "tray": {
         "icon-size": 21,
-        "spacing": 10
+        "spacing": 5
     },
 
     "clock": {
@@ -68,7 +68,7 @@
 	"timezone" : "Europe/Berlin",
 	"format" : "{:%H:%M  %a %d.%m.%y %Z}",
         //"tooltip-format": "<big>{:%Y %B}</big>\n<tt><small>{calendar}</small></tt>",
-        //"format-alt": "{:%Y-%m-%d (%W)}",
+        "format-alt": "{:%Y-%m-%d (%W)}",
 	"interval": 20
 	},
 
@@ -84,7 +84,7 @@
     "temperature": {
         "thermal-zone": 2,
         "hwmon-path": "/sys/class/hwmon/hwmon2/temp1_input",
-        "critical-threshold": 80,
+        "critical-threshold": 70,
         "format-critical": "{temperatureC}°C {icon}",
         "format": "{temperatureC}°C {icon}",
         "format-icons": [""]
@@ -102,7 +102,7 @@
             "critical": 15
         },
         "format": "{capacity}% {icon}",
-        "format-charging": "{capacity}% ",
+        "format-charging": "{capacity}% 🔋",
         "format-plugged": "{capacity}% ",
         "format-alt": "{time} {icon}",
         // "format-good": "", // An empty format will hide the module
@@ -113,9 +113,9 @@
     "network": {
         // "interface": "wlp2*", // (Optional) To force the use of this interface
         "format-wifi": "{essid} ({signalStrength}%) ",
-        "format-ethernet": "{ipaddr}/{cidr} ",
-        "tooltip-format": "{ifname} via {gwaddr} ",
-        "format-linked": "{ifname} (No IP) ",
+        "format-ethernet": "{ipaddr}/{cidr} ",
+        "tooltip-format": "{ifname} via {gwaddr}",
+        "format-linked": "{ifname} (No IP)",
         "format-disconnected": "Disconnected ⚠",
         "format-alt": "{ifname}: {ipaddr}/{cidr}"
     },
